# metashell

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  appveyor.yml  build.bat  build.sh  install_build_dependencies.sh  mkdocs.yml
3rd/readline/: CMakeLists.txt
3rd/termcap/: CMakeLists.txt
app/: CMakeLists.txt  console.cpp  console.hpp  console_config.cpp  console_config.hpp  editline_shell.cpp  editline_shell.hpp  editline_tab_completion_override.cpp  editline_tab_completion_override.hpp  interrupt_handler_override.cpp  interrupt_handler_override.hpp  main.cpp  override_guard.hpp  readline_shell.cpp  readline_shell.hpp  syntax_highlighted_display.cpp  syntax_highlighted_display.hpp
app/config_tester/: CMakeLists.txt  main.cpp
app/metashell/: CMakeLists.txt  console_config.cpp  console_config.hpp  main.cpp  override_guard.hpp
app/reference_gen/: CMakeLists.txt  cmd_t.cpp  cmd_t.hpp  commands.cpp  commands.hpp  file_cache.cpp  file_cache.hpp  main.cpp
app/replace_part/: CMakeLists.txt  arguments.cpp  arguments.hpp  main.cpp
lib/: CMakeLists.txt  backtrace.cpp  call_graph_node.cpp  clang_binary.cpp  colored_string.cpp  command.cpp  command_processor_queue.cpp  config.cpp  console_config.cpp  console_displayer.cpp  console_type.cpp  cxcodecompleteresults.cpp  cxcodecompleteresults.hpp  cxcursor.cpp  cxcursor.hpp  cxdiagnostic.cpp  cxdiagnostic.hpp  cxindex.cpp  cxindex.hpp  cxstring.cpp  cxstring.hpp  cxtranslationunit.cpp  cxtranslationunit.hpp  cxtype.cpp  cxtype.hpp  cxtypekind.cpp  cxtypekind.hpp  default_clang_search_path.hpp  default_environment_detector.cpp  default_include.hpp  exception.cpp  exception.hpp  expression_evaluating_ast_consumer.cpp  expression_evaluating_ast_consumer.hpp  file_location.cpp  file_location.hpp  forward_trace_iterator.cpp  forwarding_ast_consumer.hpp  frame.cpp  fstream_file_writer.cpp  (+97 more)
lib/boost/: CMakeLists.txt
lib/clang/: CMakeLists.txt  cxcodecompleteresults.cpp  cxcursor.cpp  cxdiagnostic.cpp  cxindex.cpp  cxstring.cpp  cxtranslationunit.cpp  cxtype.cpp  get_type_of_variable.cpp  libclang.cpp  version.cpp
lib/compiler_stub/: CMakeLists.txt
lib/core/: CMakeLists.txt  available_engines.cpp  breakpoint.cpp  caching_disabled.cpp  clang_binary.cpp  code_completer_clang.cpp  code_completer_constant.cpp  column.cpp  command.cpp  command_processor_queue.cpp  comment_json_writer.cpp  config.cpp  console_config.cpp  console_displayer.cpp  console_type.cpp  cpp_validator_clang.cpp  cpp_validator_constant.cpp  cpp_validator_vc.cpp  cpp_validator_wave.cpp  cxcursor.hpp  cxdiagnostic.hpp  cxindex.cpp  cxindex.hpp  cxtranslationunit.cpp  debugger_history.cpp  default_clang_search_path.hpp  default_environment_detector.cpp  disable_precompiled_header_guard.cpp  empty_environment.cpp  engine_clang.cpp  engine_constant.cpp  engine_entry.cpp  engine_gcc.cpp  engine_null.cpp  engine_templight.cpp  engine_vc.cpp  engine_wave.cpp  event_cache.cpp  exception.cpp  extra_sysinclude.hpp  (+121 more)
lib/data/: CMakeLists.txt  backtrace.cpp  call_graph_node.cpp  colored_string.cpp  command.cpp  config.cpp  console_type.cpp  cpp_code.cpp  debugger_event.cpp  event_category.cpp  event_data.cpp  event_details.cpp  event_kind.cpp  event_name.cpp  exit_code_t.cpp  file_location.cpp  frame.cpp  frame_stack.cpp  headers.cpp  in_memory_event_data_sequence.cpp  include_argument.cpp  include_type.cpp  instantiation_kind.cpp  logging_mode.cpp  metaprogram.cpp  metaprogram_builder.cpp  metaprogram_mode.cpp  paragraph.cpp  pop_frame.cpp  process_output.cpp  result.cpp  shell_config.cpp  shell_config_name.cpp  standard.cpp  stdlib.cpp  text.cpp  text_position.cpp  timeless_event_data.cpp  timeless_event_details.cpp  token.cpp  (+5 more)
lib/defaults/: CMakeLists.txt
lib/iface/: CMakeLists.txt
lib/main_shell/: CMakeLists.txt
lib/mdb/: CMakeLists.txt
lib/mock/: CMakeLists.txt
lib/pattern/: CMakeLists.txt
lib/pragma/: CMakeLists.txt
lib/process/: CMakeLists.txt  exception.cpp  execution.cpp  fd_t.cpp  file.hpp  file_util.cpp  file_util.hpp  input_file.cpp  input_file.hpp  output_file.cpp  output_file.hpp  pipe.cpp  pipe.hpp  run.cpp
lib/readline/: CMakeLists.txt  history.cpp  line_reader.cpp  version.cpp
lib/replace_part/: CMakeLists.txt
lib/system_test/: CMakeLists.txt  call_graph_node.cpp  code_completer.cpp  event_kind.cpp  filename_set.cpp  frame.cpp  metashell_instance.cpp  raw_text.cpp  util.cpp
test/: CMakeLists.txt  argv0.hpp  breaking_environment.cpp  breaking_environment.hpp  init_clang_path.cpp  main.cpp  mdb_test_shell.cpp  mdb_test_shell.hpp  metadebugger_test_shell.cpp  metadebugger_test_shell.hpp  mock_command_processor.cpp  mock_console.hpp  mock_environment_detector.cpp  mock_environment_detector.hpp  string_reader.cpp  string_reader.hpp  string_set.cpp  string_set.hpp  test_argument_parsing.cpp  test_breaking_environment.cpp  test_command.cpp  test_completion.cpp  test_config.cpp  test_config_detection.cpp  test_console_displayer.cpp  test_console_type.cpp  test_environment.cpp  test_evaluation.cpp  test_fibonacci.hpp  test_file_location.cpp  test_formatting.cpp  test_instantiation_kind.cpp  test_json_line_reader.cpp  test_mdb_backtrace.cpp  test_mdb_command.cpp  test_mdb_command_parsing.cpp  test_mdb_continue.cpp  test_mdb_evaluate.cpp  test_mdb_forwardtrace.cpp  test_mdb_rbreak.cpp  (+31 more)
test/system/: CMakeLists.txt  backtrace.cpp  backtrace.hpp  call_graph.cpp  call_graph.hpp  call_graph_node.cpp  call_graph_node.hpp  comment.cpp  comment.hpp  error.cpp  error.hpp  frame.cpp  frame.hpp  instantiation_kind.cpp  instantiation_kind.hpp  json_generator.cpp  json_generator.hpp  json_string.cpp  json_string.hpp  main.cpp  paragraph.cpp  paragraph.hpp  placeholder.cpp  placeholder.hpp  prompt.cpp  prompt.hpp  raw_text.cpp  raw_text.hpp  run_metashell.cpp  run_metashell.hpp  system_test_config.cpp  system_test_config.hpp  test_evaluation.cpp  test_pragma_evaluate.cpp  test_readme.cpp  type.cpp  type.hpp
test/unit/: CMakeLists.txt  argv0.cpp  breaking_environment.cpp  breaking_environment.hpp  empty_container.cpp  (+89 more)
(+2437 files in other folders)
